[project]
name = "sa-filters"
version = "2.1.0"
description = "A library to filter SQLAlchemy queries."
readme = "README.rst"
authors = [
  {name = "Student.com", email = "wearehiring@student.com"}
]
maintainers = [
  {name = "slymit", email = "slymit@gmail.com"}
]
license = "Apache-2.0"
license-files = [
    "LICENSE",
]
requires-python = ">=3.7"
dependencies = [
  "sqlalchemy>=1.4.24",
]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: Database :: Front-Ends",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/slymit/sa-filters"

[project.optional-dependencies]
dev = [
  "pytest>=6.2.5",
  "packaging>=23.1",
  "coverage>=7.0.0",
  "sqlalchemy-utils~=0.41.1",
  "flake8",
  "restructuredtext-lint",
  "Pygments",
]
mysql = [
  "mysql-connector-python-rf==2.2.2",
]
postgresql = [
  "psycopg2~=2.9.9",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["test", "test.*"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    requires = tox-extras
    minversion = 4.6.4
    envlist = {py37,py38,py39,py310,py311,py312,py313,py314}-sqlalchemy{1.4,2.0}

    [testenv]
    allowlist_externals = make
    usedevelop = true
    extras =
        dev
        mysql
        postgresql
    deps =
        {py37,py38,py39,py310,py311,py312,py313,py314}: pytest~=5.4.1
        sqlalchemy1.4: sqlalchemy>=1.4,<2.0
        sqlalchemy2.0: sqlalchemy>=2.0
    commands =
        make coverage ARGS='-x -vv'

    [testenv:{py37,py38}-sqlalchemy{1.4,2.0}]
    skip_install = true
    tox_extras =
        dev
        mysql
        postgresql
"""