[project]
name = "sa-filters"
version = "2.1.0"
description = "A library to filter SQLAlchemy queries."
readme = "README.rst"
authors = [
  {name = "Student.com", email = "wearehiring@student.com"}
]
maintainers = [
  {name = "slymit", email = "slymit@gmail.com"}
]
license = "Apache-2.0"
license-files = [
    "LICENSE",
]
requires-python = ">=3.10"
dependencies = [
  "sqlalchemy>=1.4.24",
]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: Database :: Front-Ends",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/slymit/sa-filters"

[project.optional-dependencies]
dev = [
  "pytest>=6.2.5",
  "packaging>=23.1",
  "pytest-cov>=7.0.0",
  "sqlalchemy-utils>=0.41.1,<0.43.0",
  "ruff",
  "restructuredtext-lint",
  "Pygments",
]
mysql = [
  "mysql-connector-python-rf==2.2.2",
]
postgresql = [
  "psycopg2~=2.9.9",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["test", "test.*"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

[tool.tox]
min_version = "4.6.4"
env_list = [
  "py310-sqlalchemy1.4", "py310-sqlalchemy2.0",
  "py311-sqlalchemy1.4", "py311-sqlalchemy2.0",
  "py312-sqlalchemy1.4", "py312-sqlalchemy2.0",
  "py313-sqlalchemy1.4", "py313-sqlalchemy2.0",
  "py314-sqlalchemy1.4", "py314-sqlalchemy2.0"
]

[tool.tox.env_run_base]
allowlist_externals = ["make"]
usedevelop = true
extras = ["dev", "mysql", "postgresql"]
deps = ["pytest~=5.4.1"]
commands = [
  ["make", "coverage", "ARGS=--junitxml=junit.xml -o junit_family=legacy -x -vv"]
]

[tool.tox.env."py{310,311,312,313,314}-sqlalchemy1.4"]
deps = ["pytest~=5.4.1", "sqlalchemy>=1.4,<2.0"]

[tool.tox.env."py{310,311,312,313,314}-sqlalchemy2.0"]
deps = ["pytest~=5.4.1", "sqlalchemy>=2.0"]
